...
          ],
        ),
        actions: [
          _buildCloseButton(),
          IconButton(
            icon: const Icon(Icons.logout),
            tooltip: 'ログアウト',
            onPressed: () async {
              // GoogleSignInAccountの場合のみclearAuthCache/signOut
              if (widget.user is GoogleSignInAccount) {
                await widget.user.clearAuthCache();
                await AuthService().signOut();
              }
...
                );
              }
            },
          ),
          IconButton(
            icon: const Icon(Icons.history),
            tooltip: '履歴',
            onPressed: () {
              Navigator.push(
                context,
                MaterialPageRoute(
                  builder: (context) => DirectoryHistoryScreen(
                      directoryHistoryRepositoryInterface:
...
                ),
              );
            },
          ),
          IconButton(
            icon: const Icon(Icons.list),
            tooltip: 'ディレクトリ一覧',
            onPressed: () async {
              await Navigator.push(
                context,
                MaterialPageRoute(
                  builder: (context) => DirectoryListScreen(
                    user: widget.user,
...
                            ),
                            child: Column(
                              crossAxisAlignment: CrossAxisAlignment.start,
                              mainAxisAlignment: MainAxisAlignment.start,
                              mainAxisSize: MainAxisSize.min,
                              children: [
                                const Text('ディレクトリ操作者',
                                    style: TextStyle(
                                        fontSize: 18,
                                        fontWeight: FontWeight.bold),
                                    key: ValueKey('directoryOperatorText')),
                                Text('ユーザー: $userDisplayName',
                                    key: const ValueKey('userNameText')),
                                Text('メール: $userEmail',
                                    key: const ValueKey('userEmailText')),
                                const SizedBox(height: 24),
                                Container(
                                  padding: const EdgeInsets.symmetric(
                                      horizontal: 8, vertical: 2),
                                  decoration: BoxDecoration(
                                    color: Colors.grey[200],
...
                                        });
                                        fetchDriveInfo();
                                      }
                                    },
                                    underline: const SizedBox(),
                                    dropdownColor: Colors.white,
                                    key: const ValueKey('dropdown'),
                                  ),
                                ),
                                const SizedBox(height: 16),
                                Text(
                                  'ファイル数: ${fileCount ?? "-"}',
                                  key: ValueKey('filesCountText'),
                                ),
                                Text(
                                  totalSize != null
                                      ? '総容量: ${(totalSize! / (1024 * 1024)).toStringAsFixed(2)} MB'
                                      : '総容量: -',
                                  key: ValueKey('totalSizeText'),
                                ),
                                const SizedBox(height: 8),
                                Text(
                                  '全ディレクトリ総ファイル数: '
                                  '${allDirectoriesTotalFileCount ?? "-"}',
                                  style: const TextStyle(
                                      fontWeight: FontWeight.bold),
                                  key: ValueKey('allDirTotalFilesCountText'),
                                ),
                                Text(
                                  allDirectoriesTotalSize != null
                                      ? '全ディレクトリ総容量: ${(allDirectoriesTotalSize! / (1024 * 1024)).toStringAsFixed(2)} MB'
                                      : '全ディレクトリ総容量: -',
                                  style: const TextStyle(
                                      fontWeight: FontWeight.bold),
                                  key: ValueKey('allDirTotalSizeText'),
                                ),
                                if (driveUsage != null && driveLimit != null)
                                  Padding(
                                    padding: const EdgeInsets.only(bottom: 8),
                                    child: Text(
                                      'Google Drive使用量: '
                                      '${(driveUsage! / (1024 * 1024 * 1024)).toStringAsFixed(2)} GB / '
                                      '${(driveLimit! / (1024 * 1024 * 1024)).toStringAsFixed(2)} GB',
                                      style: const TextStyle(
                                          fontWeight: FontWeight.bold,
                                          color: Colors.blue),
                                      key: ValueKey('googleDriveUsageText'),
                                    ),
                                  ),
                              ],
                            ),
                          ),
          ),
...
