...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title:
            const Text('ディレクトリID一覧', key: ValueKey('directoryListTitleText')),
        actions: [
          IconButton(
            icon: const Icon(Icons.add),
            tooltip: 'ディレクトリ追加',
            onPressed: () async {
              await Navigator.push(
                context,
                MaterialPageRoute(
                  builder: (context) => DirectoryEditScreen(
                    onSave: (dir) => addOrEditDirectory(dir),
...
